Starting implementation of a ranged "brush" renamed the localization strings

--- a/src/main/resources/assets/cste/lang/en_US.lang
+++ b/src/main/resources/assets/cste/lang/en_US.lang
@@ -1,26 +1,29 @@
-commands.cste.help=/cste-help
+cste.commands.help=/cste-help
 
-commands.cste.fill=/cste-fill <block>
-commands.cste.fill.help=/cste-fill <block> - fills the selection with block.
-commands.cste.fill.nosel=No area selected!
-commands.cste.fill.nomode=Unknown mode selected?!
-commands.cste.fill.builderr=Some or all of the structure was not built, reason(s): %s
-commands.cste.fill.success=%s block(s) changed.
-commands.cste.fill.nochange=No blocks changed.
+cste.commands.fill=/cste-fill <block>
+cste.commands.fill.help=/cste-fill <block> - fills the selection with block.
+cste.commands.fill.nosel=No area selected!
+cste.commands.fill.nomode=Unknown mode selected?!
+cste.commands.fill.builderr=Some or all of the structure was not built, reason(s): %s
+cste.commands.fill.success=%s block(s) changed.
+cste.commands.fill.nochange=No blocks changed.
 
-commands.cste.wand=/cste-wand [clear]
-commands.cste.wand.help=/cste-wand [clear] - selects and clears the wand.
-commands.cste.wand.sel=%s is now the wand.
-commands.cste.wand.clear=Wand cleared.
-commands.cste.wand.noitem=No item in hand.
+cste.commands.wand=/cste-wand [clear]
+cste.commands.wand.help=/cste-wand [clear] - selects and clears the wand.
+cste.commands.wand.sel=%s is now the wand.
+cste.commands.wand.clear=Wand cleared.
+cste.commands.wand.noitem=No item in hand.
 
-commands.cste.mode=/cste-mode <solid|hollow|frame>
-commands.cste.mode.help=/cste-mode <solid|hollow|frame> - changes the fill mode.
-commands.cste.mode.success=Fill mode changed to %s.
-commands.cste.mode.badarg=Invalid mode. 
+cste.commands.mode=/cste-mode <solid|hollow|frame>
+cste.commands.mode.help=/cste-mode <solid|hollow|frame> - changes the fill mode.
+cste.commands.mode.success=Fill mode changed to %s.
+cste.commands.mode.badarg=Invalid mode. 
 
-commands.cste.pos=/cste-pos <num> [x] [y] [z]
-commands.cste.pos.help=/cste-pos <num> [x] [y] [z] - sets pos to your pos or x y z.
-commands.cste.pos.invalidnum=%s is not a valid pos number.
-commands.cste.pos.posset=Pos%s set to %s.
-commands.cste.pos.clear=Positions cleared.
+cste.commands.pos=/cste-pos <num> [x] [y] [z]
+cste.commands.pos.help=/cste-pos <num> [x] [y] [z] - sets pos to your pos or x y z.
+cste.commands.pos.invalidnum=%s is not a valid pos number.
+cste.commands.pos.posset=Pos%s set to %s.
+cste.commands.pos.clear=Positions cleared.
+
+cste.keybinding.category=CSTE Keybindings
+cste.keybinding.usebrush=Use brush
