--- a/src/main/resources/assets/cste/lang/en_US.lang
+++ b/src/main/resources/assets/cste/lang/en_US.lang
@@ -14,10 +14,10 @@ cste.commands.wand.sel=%s is now the wand.
 cste.commands.wand.clear=Wand cleared.
 cste.commands.wand.noitem=No item in hand.
 
-cste.commands.selmode=/cste-mode <solid|hollow|frame>
-cste.commands.selmode.help=/cste-mode <solid|hollow|frame> - changes the fill mode.
-cste.commands.selmode.success=Fill mode changed to %s.
-cste.commands.selmode.badarg=Invalid mode. 
+cste.commands.fillmode=/cste-fillmode <solid|hollow|frame>
+cste.commands.fillmode.help=/cste-fillmode <solid|hollow|frame> - changes the fill mode.
+cste.commands.fillmode.success=Fill mode changed to %s.
+cste.commands.fillmode.badarg=Invalid mode. 
 
 cste.commands.pos=/cste-pos <num> [x] [y] [z]
 cste.commands.pos.help=/cste-pos <num> [x] [y] [z] - sets pos to your pos or x y z.
@@ -32,6 +32,13 @@ cste.commands.brush.clear=Brush cleared.
 cste.commands.brush.noitem=No item in hand.
 cste.commands.brush.smallrad=The radius must be at least 1.
 cste.commands.brush.noblock=No block was selected.
+
+cste.commands.brushmode=/cste-brushmode [fill|hollow|smooth] [radius] [block]
+cste.commands.brushmode.help=/cste-brushmode [fill|hollow|smooth] [radius] [block] - changes the brush mode.
+cste.commands.brushmode.success=Brush changed to %s.
+cste.commands.brushmode.badmode=Invalid mode.
+cste.commands.brushmode.badrad=Radius must be a number above 0.
+cste.commands.brushmode.info=Brush is currently: %s.
 
 cste.keybinding.category=CSTE Keybindings
 cste.keybinding.usebrush=Use brush
